--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libpam-athena-locker (2.1-0debathena2) unstable; urgency=low
+
+  * Set maintainer to debathena@mit.edu.
+
+ -- Tim Abbott <tabbott@mit.edu>  Tue, 29 Jan 2008 22:19:00 -0500
+
 libpam-athena-locker (2.1-0debathena1) unstable; urgency=low
 
   * close() stderr and stdout in the child process
