--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libpam-athena-locker (2.1-0debathena3) unstable; urgency=low
+
+  * Self-enable with pam-auth-update where available.
+
+ -- Greg Price <price@mit.edu>  Sat,  1 Nov 2008 02:23:19 -0400
+
 libpam-athena-locker (2.1-0debathena2) unstable; urgency=low
 
   * Set maintainer to debathena@mit.edu.
