--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libpam-athena-locker (2.1-0debathena4) unstable; urgency=low
+
+  * change pam-auth-update message to be clearer in menu
+
+ -- Greg Price <price@mit.edu>  Sat,  1 Nov 2008 07:58:41 -0400
+
 libpam-athena-locker (2.1-0debathena3) unstable; urgency=low
 
   * Self-enable with pam-auth-update where available.
