--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+libpam-athena-locker (2.1-0debathena5) unstable; urgency=low
+
+  * Remove DEB_AUTO_UPDATE_DEBIAN_CONTROL.
+  * Change "Debian-Athena Project" to "Debathena Project".
+  * Remove debian/control from version control.
+  * Clean up debian/copyright.
+
+ -- Tim Abbott <tabbott@mit.edu>  Sat, 24 Jan 2009 18:01:23 -0500
+
 libpam-athena-locker (2.1-0debathena4) unstable; urgency=low
 
   * change pam-auth-update message to be clearer in menu
