--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,16 @@
-libpam-athena-locker (2.2-0debathena2) UNRELEASED; urgency=low
+libpam-athena-locker (2.2-0debathena2) unstable; urgency=low
 
+  [ Jonathan Reed ]
   * Bump debian/compat to 6
   * Switch from control.in to control (Trac: #561)
   * Bump Standards-Version to 3.9.3
   * Bump compat level to 7
 
- -- Jonathan Reed <jdreed@mit.edu>  Wed, 03 Apr 2013 13:31:07 -0400
+  [ Alexander Chernyakhovsky ]
+  * Add git-buildpackage configuration
+  * Set source format to 3.0 (quilt)
+
+ -- Alexander Chernyakhovsky <achernya@mit.edu>  Sat, 28 Sep 2013 23:49:05 -0400
 
 libpam-athena-locker (2.2-0debathena1) unstable; urgency=low
 
