--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libpam-athena-locker (2.2.1-0debathena1) unstable; urgency=low
+
+  * Release 2.2.1
+
+ -- Alexander Chernyakhovsky <achernya@mit.edu>  Sun, 09 Feb 2014 06:35:16 -0500
+
 libpam-athena-locker (2.2-0debathena2) unstable; urgency=low
 
   [ Jonathan Reed ]
